Fixing spacing a little on the house cards

--- a/client/styles/theme.scss
+++ b/client/styles/theme.scss
@@ -131,10 +131,10 @@ h2 {
     cursor: pointer;
     display: inline-block;
     font-weight: 300;
-    margin: 20px;
+    margin: 15px 10px;
     padding: 40px 24px;
     height: 400px;
-    width: 300px;
+    width: 280px;
     text-align: center;
     vertical-align: top;
     position: relative;
